--- a/Contrived/Contrived.Web/Views/_ViewImports.cshtml
+++ b/Contrived/Contrived.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 @using Contrived.Web
 @using Contrived.Web.Models
+@using StackExchange.Profiling
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, MiniProfiler.AspNetCore.Mvc
