--- a/Contrived/Contrived.Web/Views/Home/Index.cshtml
+++ b/Contrived/Contrived.Web/Views/Home/Index.cshtml
@@ -8,7 +8,8 @@
     {
         <div class="col-md-12">
             <h2>@post.Title</h2>
-            <h6>Author</h6>
+            <h6>By: @post.Author</h6>
+            <h6>On: @post.PostDate.ToShortDateString()</h6>
             <p>@post.Body</p>
         </div>
     }
